feat: complete sprint 00-24 constraints